--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "BSD-Clause-3"
 dotenv = "0.15.0"
 env_logger = "0.11.5"
 log = "0.4.22"
+clap = { version = "4.4", features = ["derive"] }
 
 [profile.release]
 opt-level = 3        # Maximum optimization
